<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_20dp">

        <EditText
            android:id="@+id/etName"
            android:paddingStart="@dimen/dimen_15dp"
            android:paddingEnd="@dimen/dimen_15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_60dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/shape_collect"
            android:textColor="@color/color_171717"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/collectEditName"
            android:textColor="@color/color_171717"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_20dp">

        <EditText
            android:id="@+id/etLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_60dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:background="@drawable/shape_collect"
            android:textColor="@color/color_171717"
            android:textSize="@dimen/dimen_12sp"
            android:paddingStart="@dimen/dimen_15dp"
            android:paddingEnd="@dimen/dimen_15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/collectEditLink"
            android:textColor="@color/color_171717"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/shape_confirm"
        android:textSize="@dimen/dimen_14sp"
        android:textColor="@color/color_ffffff"
        android:text="@string/collectEditConfirm"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_40dp"/>

</LinearLayout>