<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_180dp"
            android:background="@color/color_18ce94">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivClient"
                android:layout_width="@dimen/dimen_80dp"
                android:src="@mipmap/image_client_default"
                android:layout_height="@dimen/dimen_80dp"
                android:layout_marginTop="@dimen/dimen_60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:background="@drawable/bg_rectangle_press_ripple"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/layoutRank"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp">

            <ImageView
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:src="@drawable/image_mine_rank" />

            <TextView
                android:text="@string/mine_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:textColor="@color/color_424242"
                android:textSize="@dimen/dimen_12sp" />

            <ImageView
                android:src="@drawable/pointer_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_width="@dimen/dimen_15dp"
                android:layout_height="@dimen/dimen_15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/bg_rectangle_press_ripple"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/layoutCollect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp">

            <ImageView
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:src="@drawable/image_mine_collect" />


            <TextView
                android:text="@string/mine_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:textColor="@color/color_424242"
                android:textSize="@dimen/dimen_12sp" />

            <ImageView
                android:src="@drawable/pointer_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_width="@dimen/dimen_15dp"
                android:layout_height="@dimen/dimen_15dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/bg_rectangle_press_ripple"
            android:focusable="true"
            android:clickable="true"
            android:id="@+id/layoutSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp">

            <ImageView
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:src="@drawable/image_mine_setting" />


            <TextView
                android:text="@string/mine_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:textColor="@color/color_424242"
                android:textSize="@dimen/dimen_12sp" />

            <ImageView
                android:src="@drawable/pointer_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_width="@dimen/dimen_15dp"
                android:layout_height="@dimen/dimen_15dp"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>