<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/dividerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_05dp"
            android:background="@color/color_f0f0f0"
            app:layout_constraintBottom_toTopOf="@+id/navigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            app:itemBackground="@color/color_ffffff"
            app:itemIconSize="@dimen/dimen_24dp"
            app:itemIconTint="@drawable/selector_navigation"
            app:itemTextAppearanceActive="@style/navigation_selected_text"
            app:itemTextAppearanceInactive="@style/navigation_normal_text"
            app:itemTextColor="@drawable/selector_navigation"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_navigation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginEnd="-65dp"
        android:background="@color/color_dcdcdc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_220dp"
                android:background="@drawable/bg_setting">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivClient"
                    android:layout_width="@dimen/dimen_80dp"
                    android:layout_height="@dimen/dimen_80dp"
                    android:layout_marginTop="@dimen/dimen_60dp"
                    android:src="@mipmap/image_client_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_100dp"
                    android:textColor="@color/color_424242"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivClient" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/layoutRank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/bg_item"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="@dimen/dimen_20dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:src="@drawable/image_mine_rank" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_40"
                    android:text="@string/mine_rank"
                    android:textColor="@color/color_424242"
                    android:textSize="@dimen/dimen_12sp" />

                <ImageView
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:src="@drawable/pointer_right" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutCollect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/bg_item"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="@dimen/dimen_20dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:src="@drawable/image_mine_collect" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_40"
                    android:text="@string/mine_collect"
                    android:textColor="@color/color_424242"
                    android:textSize="@dimen/dimen_12sp" />

                <ImageView
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:src="@drawable/pointer_right" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutSetting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@drawable/bg_item"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="@dimen/dimen_20dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:src="@drawable/image_mine_setting" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_40"
                    android:text="@string/mine_setting"
                    android:textColor="@color/color_424242"
                    android:textSize="@dimen/dimen_12sp" />

                <ImageView
                    android:layout_width="@dimen/dimen_15dp"
                    android:layout_height="@dimen/dimen_15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:src="@drawable/pointer_right" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.drawerlayout.widget.DrawerLayout>